# standup_spinner

./: README.md  install_db_and_schema.sh
backend/: .env  main.py  pyproject.toml
frontend/: index.html
